@@ -11,6 +11,8 @@ Changes to Version 2.0-13
     o Anova.mlm() now will do univariate repeated-measures ANOVA even if the error SSP matrix is singular.
     
     o hccm() will now accept a weighted linear models (suggestion of Stefan Holst Bache).
+    
+    o deltaMethod.default() now applies coef() and vcov() to a model for which these are supported (generalizing a suggestion by Scott Kostyshak).
 
 Changes to Version 2.0-12
 
